--- a/src/BlazorHybridExampleApp/BlazorHybridExampleApp.csproj
+++ b/src/BlazorHybridExampleApp/BlazorHybridExampleApp.csproj
@@ -1,16 +1,39 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net9.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <UseWindowsForms>true</UseWindowsForms>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>WinExe</OutputType>
+        <TargetFramework>net9.0-windows</TargetFramework>
+        <Nullable>enable</Nullable>
+        <UseWindowsForms>true</UseWindowsForms>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <ApplicationIcon>WinFormiumBlazor.ico</ApplicationIcon>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\WinFormedge.Blazor\WinFormedge.Blazor.csproj" />
-    <ProjectReference Include="..\WinFormedge\WinFormedge.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\WinFormedge.Blazor\WinFormedge.Blazor.csproj" />
+        <ProjectReference Include="..\WinFormedge\WinFormedge.csproj" />
 
+    </ItemGroup>
+    <ItemGroup>
+        <None Remove="wwwroot\**\*" />
+    </ItemGroup>
+    <ItemGroup>
+        <EmbeddedResource Include="wwwroot\**\*" />
+    </ItemGroup>
+    <ItemGroup>
+      <Content Include="WinFormiumBlazor.ico" />
+    </ItemGroup>
+    <ItemGroup>
+      <Compile Update="Properties\Resources.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Resources.resx</DependentUpon>
+      </Compile>
+    </ItemGroup>
+    <ItemGroup>
+      <EmbeddedResource Update="Properties\Resources.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+    </ItemGroup>
 </Project>
