--- a/src/WinFormedge.Blazor/WinFormedge.Blazor.csproj
+++ b/src/WinFormedge.Blazor/WinFormedge.Blazor.csproj
@@ -8,7 +8,6 @@
 
     <ItemGroup>
         <ProjectReference Include="..\WinFormedge\WinFormedge.csproj" />
-        <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3240.44" />
     </ItemGroup>
 
     <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0-windows' ">
@@ -20,11 +19,11 @@
     </ItemGroup>
 
     <PropertyGroup>
-        <Version>0.1.3240.$([System.DateTime]::Now.Date.Subtract($([System.DateTime]::Parse($([System.String]::Format("{0}-5-9",2025))))).TotalDays)</Version>
+        <Version>0.1.3296.$([System.DateTime]::Now.Date.Subtract($([System.DateTime]::Parse($([System.String]::Format("{0}-5-9",2025))))).TotalDays)</Version>
         <Title>Blazor Hybrid Plugin for WinFormedge</Title>
         <Description>The Blazor Hybrid Plugin for WinFormedge enables seamless integration of Blazor components into WinFormedge-based Windows Forms applications.</Description>
         <PackageTags>WebView2 WinForms WinFormedge Hybrid-App</PackageTags>
-        <PackageIcon>WinFormedgeLogo.png</PackageIcon>
+        <PackageIcon>WinFormedgeBlazor.png</PackageIcon>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryType>git</RepositoryType>
         <PackageProjectUrl>https://github.com/XuanchenLin/WinFormedge</PackageProjectUrl>
@@ -40,22 +39,22 @@
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)'=='Release'">
-        <Version>0.1.3240.3</Version>
+        <Version>0.1.3296.1</Version>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <ItemGroup>
-        <Using Include="System.Web"/>
-        <Using Include="Microsoft.AspNetCore.Components"/>
-        <Using Include="Microsoft.AspNetCore.Components.Web"/>
-        <Using Include="Microsoft.AspNetCore.Components.WebView"/>
-        <Using Include="Microsoft.Extensions.DependencyInjection"/>
-        <Using Include="Microsoft.Extensions.FileProviders"/>
-        <Using Include="Microsoft.Web.WebView2.Core"/>
+        <Using Include="System.Web" />
+        <Using Include="Microsoft.AspNetCore.Components" />
+        <Using Include="Microsoft.AspNetCore.Components.Web" />
+        <Using Include="Microsoft.AspNetCore.Components.WebView" />
+        <Using Include="Microsoft.Extensions.DependencyInjection" />
+        <Using Include="Microsoft.Extensions.FileProviders" />
+        <Using Include="Microsoft.Web.WebView2.Core" />
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="..\..\artworks\WinFormedgeLogo.png">
+        <None Include="..\..\artworks\WinFormedgeBlazor.png">
             <Pack>True</Pack>
             <PackagePath>\</PackagePath>
         </None>
