✨ Added support for multiple resource assemblies for BlazorHybrid.

--- a/src/FluentUIBlazorExampleApp/FluentUIBlazorExampleApp.csproj
+++ b/src/FluentUIBlazorExampleApp/FluentUIBlazorExampleApp.csproj
@@ -20,6 +20,10 @@
         <EmbeddedResource Include="wwwroot\**\*" />
     </ItemGroup>
     <ItemGroup>
+      <Content Remove="wwwroot\fonts\fonticon.eot" />
+      <Content Remove="wwwroot\fonts\fonticon.svg" />
+      <Content Remove="wwwroot\fonts\fonticon.ttf" />
+      <Content Remove="wwwroot\fonts\fonticon.woff" />
       <Content Remove="wwwroot\index.html" />
     </ItemGroup>
 
