--- a/src/FluentUIBlazorExampleApp/FluentUIBlazorExampleApp.csproj
+++ b/src/FluentUIBlazorExampleApp/FluentUIBlazorExampleApp.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net9.0-windows</TargetFramework>
+        <TargetFramework>net10.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
         <UseWindowsForms>true</UseWindowsForms>
         <ImplicitUsings>enable</ImplicitUsings>
@@ -10,28 +10,28 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Content Include="WinFormiumBlazor.ico" />
+        <Content Include="WinFormiumBlazor.ico" />
     </ItemGroup>
 
-    <ItemGroup>
+    <!--<ItemGroup>
         <None Remove="wwwroot\**\*" />
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="wwwroot\**\*" />
-    </ItemGroup>
+    </ItemGroup>-->
     <ItemGroup>
-      <Content Remove="wwwroot\fonts\fonticon.eot" />
-      <Content Remove="wwwroot\fonts\fonticon.svg" />
-      <Content Remove="wwwroot\fonts\fonticon.ttf" />
-      <Content Remove="wwwroot\fonts\fonticon.woff" />
-      <Content Remove="wwwroot\index.html" />
+        <Content Remove="wwwroot\fonts\fonticon.eot" />
+        <Content Remove="wwwroot\fonts\fonticon.svg" />
+        <Content Remove="wwwroot\fonts\fonticon.ttf" />
+        <Content Remove="wwwroot\fonts\fonticon.woff" />
+        <Content Remove="wwwroot\index.html" />
     </ItemGroup>
 
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.12.0" />
-      <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Emoji" Version="4.12.0" />
-      <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.12.0" />
+        <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.13.1" />
+        <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Emoji" Version="4.13.1" />
+        <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.13.1" />
     </ItemGroup>
 
     <ItemGroup>
@@ -40,19 +40,24 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="Properties\Resources.Designer.cs">
-        <DesignTime>True</DesignTime>
-        <AutoGen>True</AutoGen>
-        <DependentUpon>Resources.resx</DependentUpon>
-      </Compile>
+        <Compile Update="Properties\Resources.Designer.cs">
+            <DesignTime>True</DesignTime>
+            <AutoGen>True</AutoGen>
+            <DependentUpon>Resources.resx</DependentUpon>
+        </Compile>
     </ItemGroup>
 
     <ItemGroup>
-      <EmbeddedResource Update="Properties\Resources.resx">
-        <Generator>ResXFileCodeGenerator</Generator>
-        <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      </EmbeddedResource>
+        <EmbeddedResource Update="Properties\Resources.resx">
+            <Generator>ResXFileCodeGenerator</Generator>
+            <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+        </EmbeddedResource>
     </ItemGroup>
-
+    <!--<Target Name="RemoveConflictingStaticWebAssets" AfterTargets="ResolveStaticWebAssetsInputs">
+        <ItemGroup>
+            <StaticWebAsset Remove="@(StaticWebAsset)" Condition="$([System.String]::Copy('%(StaticWebAsset.Identity)').Contains('blazor.modules.json'))" />
+            <StaticWebAsset Remove="@(StaticWebAsset)" Condition="$([System.String]::Copy('%(StaticWebAsset.Identity)').Contains('blazor.webview.js'))" />
+        </ItemGroup>
+    </Target>-->
 
 </Project>
